--- a/main.css
+++ b/main.css
@@ -53,7 +53,6 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr;
     grid-gap: 3rem;
-    
 }
 
 .words {
@@ -67,6 +66,7 @@ main {
 
 .words .parkList {
     overflow-y: scroll;
+    max-height: 33vh;
 }
 
 #map {
